# treestamps

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .remarkignore  CHANGES_0.4.0.md  Dockerfile  Makefile  NEWS.md  README.md  build.Dockerfile  compose.yaml  docker-compose.yaml  eslint.config.js  fix-lint.sh  lint.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  treestamps.py
.circleci/: config.yml
.github/workflows/: ci.yml  download-dist-if-identical.sh
cfg/: python.mk
tests/: __init__.py
tests/integration/: base_test.py  test_cycle.py  test_timestamp.yaml
tests/unit/: test_absolute_path.py  test_classmethods.py  test_staticmethods.py
treestamps/: __init__.py  config.py  grove.py  printer.py
treestamps/tree/: __init__.py  common.py  config.py  dump.py  get.py  init.py  load.py  set.py  write.py
