[project]
name = "treestamps"
version = "2.2.1"
description = "Create timestamp records for recursive operations on directory trees."
authors = [{ name = "AJ Slater", email = "aj@slater.net" }]
#license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = "<4.0,>=3.10"
keywords = ["timestamps", "library", "recursive", "directory"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["ruamel.yaml~=0.18.5", "termcolor~=3.0.1"]
# BUILD SYSTEM
packages = [{ include = "treestamps" }, { include = "tests", format = "sdist" }]
include = ["NEWS.md"]

[project.urls]
Homepage = "https://github.com/ajslater/treestamps"
Documentation = "https://github.com/ajslater/treestamps"
Source = "https://github.com/ajslater/treestamps"
Issues = "https://github.com/ajslater/treestamps/issues"
homepage = "https://github.com/ajslater/treestamps"
documentation = "https://github.com/ajslater/treestamps"

[dependency-groups]
dev = [
  "codespell~=2.4.1",
  "coverage[toml]<8.0,>=7.8",
  "hatchling<2.0.0,>=1.27.0",
  "icecream>=2.1.4",
  "neovim<1.0.0,>=0.3.1",
  "pyclean>=3.1.0",
  "pyright~=1.1.394",
  "pytest-cov~=6.0",
  "pytest-gitignore~=1.3",
  "radon[toml]~=6.0.1",
  "ruff~=0.11.5",
  "toml-cli<1.0.0,>=0.7.0",
  "vulture~=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["treestamps", "tests", "NEWS.md"]

[tool.codespell]
skip = ".git,.mypy_cache,.pytest_cache,.ruff_cache,.venv,*~,./dist,./node_modules,./package-lock.json,./uv.lock,./test-results"
builtin = "clear,rare,code"
check-hidden = true
ignore-words-list = "thead"

[tool.coverage.run]
source = ["treestamps"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  ".git/*",
  ".mypy_cache/*",
  ".pytest_cache/*",
  ".ruff_cache/*",
  ".venv/*",
  "*__pycache__*",
  "dist/*",
  "node_modules/*",
  "test-results/*",
  "typings/*",
]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.pytest.ini_options]
addopts = """
  --junitxml=test-results/pytest/junit.xml
  -ra
  --strict-markers
  --cov
  --cov-append
  --cov-report=html
  --cov-report=term
"""
junit_family = "xunit2"
testpaths = "tests"
pythonpath = ["."]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/node_modules",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "dist",
  "package-lock.json",
  "uv.lock",
  "test-results",
  "treestamps/__init__.py",
  "typings",
  "vulture_whitelist.py",
]
pythonVersion = "3.10"
pythonPlatform = "All"
reportImportCycles = true
reportMissingImports = true
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.radon]
exclude = "*~,.git/*,.mypy_cache/*,.pytest_cache/*,.ruff_cache/*,.venv/*,__pycache__/*,dist/*,node_modules/*,test-results/*,typings/*"

[tool.ruff]
extend-exclude = ["cache", "typings"]
target-version = "py310"

[tool.ruff.lint]
extend-ignore = [
  "BLE001",  # catch bare exception
  "COM812",  # missing trailing comma
  "COM819",  # prohibit trailing comma
  "D203",    # blank line before class docstring
  "D206",    # formatted
  "D212",    # first line multi line docstring.
  "E111",    # formatted
  "E114",    # formatted
  "E117",    # over-indented
  "E501",    # 88 char line
  "ISC001",  # formatted
  "PERF203", # try block in loop
  "S101",    # assert
  "W191",    # formatted
]
extend-select = [
  "A",
  # "AIR",
  # "ANN",
  "ARG",
  "ASYNC",
  "B",
  "B9",
  "BLE",
  "C",
  "C4",
  "C90",
  "COM",
  # "CPY",
  "D",
  "DJ",
  # "DOC",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  # "FAST",
  "FBT",
  "FIX",
  "FLY",
  # "FURB",
  # "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  # "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  # "Q", Formatted
  "N",
  # NPY,
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TCH",
  # "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.per-file-ignores]
"test_*" = ["SLF001", "T201"]
"treestamps/__init__.py" = ["F401"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.vulture]
exclude = [
  ".git/",
  ".mypy_cache/",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "*__pycache__*",
  "dist/",
  "node_modules",
  "test-results",
  "typings",
  "treestamps/__init__.py",
]
min_confidence = 61
sort_by_size = true
