[project]
authors = [{ name = "AJ Slater", email = "aj@slater.net" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "ruamel.yaml>=0.19,<=1.0",
  "termcolor~=3.0",
  "typing-extensions~=4.13",
]
description = "Create timestamp records for recursive operations on directory trees."
keywords = ["timestamps", "library", "recursive", "directory"]
license = "GPL-3.0-only"
name = "treestamps"
readme = "README.md"
requires-python = "<4.0,>=3.10"
version = "2.2.7"

[project.urls]
News = "https://treestamps.readthedocs.io/NEWS/"
Homepage = "https://github.com/ajslater/treestamps"
Documentation = "https://treestamps.readthedocs.io/"
"Issues" = "https://github.com/ajslater/treestamps/issues"
Source = "https://github.com/ajslater/treestamps"

[dependency-groups]
dev = ["icecream~=2.1", "neovim~=0.3", "pyclean~=3.1", "toml-cli~=0.7"]
lint = [
  "basedpyright~=1.30",
  "codespell~=2.4",
  "complexipy~=5.1",
  "djlint~=1.3.dev0",
  "radon[toml]~=6.0",
  "ruff~=0.13",
  "ty~=0.0.4",
  "types-python-dateutil~=2.9",
  "vulture~=2.3",
]
test = ["coverage[toml]~=7.0", "pytest-cov~=7.0", "pytest-gitignore~=1.3"]
docs = ["mkapi~=4.4", "mkdocs~=1.6", "mkdocs-minify-plugin~=0.8"]

[build-system]
requires = ["uv_build~=0.8.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = [
  ".circlci/**",
  ".*ignore",
  ".shellcheckrc",
  "bin/**",
  "eslint.config.js",
  "frontend/**",
  "Makefile",
  "package-lock.json",
  "package.json",
  "tests/**",
  "uv.lock",
  "vulture_ignorelist.py",
]
source-exclude = ["**/*\\~", "**/.DS_Store"]
wheel-exclude = []

[tool.basedpyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "dist",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
pythonVersion = "3.10"
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportImportCycles = true
reportIncompatibleUnannotatedOverride = true
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateUsage = false # ruff does this
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedParameter = false # ruff does this

[tool.codespell]
builtin = "clear,rare,code"
check-hidden = true
ignore-words-list = "thead"
skip = ".*,*~,./dist,./node_modules,./package.json,./package-lock.json,./uv.lock,./test-results"

[tool.complexipy]
failed = true
paths = ["treestamps", "tests"]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["treestamps"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  "*/.*",
  "*__pycache__*",
  "dist/*",
  "node_modules/*",
  "test-results/*",
  "typings/*",
]

[tool.pytest.ini_options]
addopts = """
  --junitxml=test-results/pytest/junit.xml
  -ra
  --strict-config
  --strict-markers
  --cov
  --cov-append
  --cov-report=html
  --cov-report=term
"""
junit_family = "xunit2"
testpaths = "tests"
pythonpath = ["."]

[tool.radon]
exclude = "*~,.*,.*/*,__pycache__/*,dist/*,node_modules/*,test-results/*,typings/*"

[tool.ruff]
extend-exclude = [
  "**/.*",
  "**/__pycache__",
  "dist",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
target-version = "py310"

[tool.ruff.lint]
extend-ignore = [
  "BLE001",  # catch bare exception
  "COM812",  # missing trailing comma
  "COM819",  # prohibit trailing comma
  "D203",    # blank line before class docstring
  "D206",    # formatted
  "D212",    # first line multi line docstring.
  "E111",    # formatted
  "E114",    # formatted
  "E117",    # over-indented
  "E501",    # 88 char line
  "ISC001",  # formatted
  "PERF203", # try block in loop
  "S101",    # assert
  "W191",    # formatted
]
extend-select = [
  # "AIR",
  "ERA",
  # "FAST",
  # ########
  # flake8 #
  # ########
  "YTT",
  # "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  # "CPY",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FIX",
  "FA",
  "INT",
  "ISC",
  "ICN",
  "LOG",
  # "G",
  "INP",
  "PIE",
  "PYI",
  "T20",
  "PT",
  # "Q", Formatted
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "SLOT",
  "TID",
  # "TD",
  "TC",
  "ARG",
  "PTH",
  # ############
  # end flake8 #
  # ############
  "FLY",
  "I",
  "C90",
  # "NPY",
  # "PD",
  "N",
  "PERF",
  "E",
  "W",
  # "DOC",
  "D",
  "F",
  "PGH",
  "PLE",
  "PLR",
  "PLW",
  "UP",
  "FURB",
  "RUF",
  "TRY",
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.per-file-ignores]
"test_*" = ["SLF001", "T201"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.ty.src]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "dist",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]

[tool.vulture]
exclude = [
  "*/.*",
  "*/__pycache__*",
  "*/node_modules*",
  "dist/",
  "test-results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true
